{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 395,
  "lineage": "41d095c8-1055-be72-79db-06d34577e2cb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "commercial_manager_db_init_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0169aa51f6faf20d5",
            "arn": "arn:aws:ec2:us-east-2:077784309645:instance/i-09985c5c4d1e2717b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "commercial-manager-ec2-s3-ssm-access-profile",
            "id": "i-09985c5c4d1e2717b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05604bdcb0c0b4fb7",
            "private_dns": "ip-10-0-1-190.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.190",
            "public_dns": "ec2-3-137-186-207.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.186.207",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-053dc35f5d72029ef",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e34c58713044d894",
            "tags": {
              "Name": "commercial-manager-db-init-ec2"
            },
            "tags_all": {
              "Name": "commercial-manager-db-init-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c3a15f420e2f313b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_s3_ssm_access_profile",
            "aws_iam_role.ec2_s3_ssm_access_role",
            "aws_s3_bucket.commercial_manager_sql_scripts",
            "aws_security_group.commercial_manager_ec2_sg",
            "data.aws_caller_identity.current",
            "module.rds.aws_db_instance.commercial_manager_mysql_db",
            "module.rds.aws_db_subnet_group.commercial_manager_db_subnet_group",
            "module.rds.aws_security_group.commercial_manager_rds_sg",
            "module.rds.aws_security_group_rule.allow_ec2_to_rds",
            "module.vpc.aws_subnet.commercial_manager_private_subnet_a",
            "module.vpc.aws_subnet.commercial_manager_private_subnet_b",
            "module.vpc.aws_subnet.commercial_manager_public_subnet_a",
            "module.vpc.aws_subnet.commercial_manager_public_subnet_b",
            "module.vpc.aws_vpc.commercial_manager_vpc",
            "null_resource.upload_sql_scripts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "commercial_manager_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077784309645:security-group/sg-0c3a15f420e2f313b",
            "description": "Allow SSH and outbound MySQL access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic for other purposes (e.g., S3 access)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0c3a15f420e2f313b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow instance to communicate with VPC endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              }
            ],
            "name": "commercial-manager-ec2-sg",
            "name_prefix": "",
            "owner_id": "077784309645",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "commercial-manager-ec2-sg"
            },
            "tags_all": {
              "Name": "commercial-manager-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf7778f99f6d3844"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "077784309645",
            "id": "sg-0c3a15f420e2f313b",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.commercial_manager_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_rds_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow outbound MySQL access to RDS",
            "from_port": 3306,
            "id": "sgrule-3520555846",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-0c3a15f420e2f313b",
            "security_group_rule_id": "sgr-074121f7e9f0244f6",
            "self": false,
            "source_security_group_id": "sg-05514f4a9664f89a1",
            "timeouts": null,
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.commercial_manager_ec2_sg",
            "module.rds.aws_security_group.commercial_manager_rds_sg",
            "module.vpc.aws_vpc.commercial_manager_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages_vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077784309645:vpc-endpoint/vpce-07b931eceff2aefeb",
            "dns_entry": [
              {
                "dns_name": "vpce-07b931eceff2aefeb-igbcsju0.ec2messages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-07b931eceff2aefeb-igbcsju0-us-east-2a.ec2messages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-07b931eceff2aefeb-igbcsju0-us-east-2b.ec2messages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "ec2messages.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z0797408A5DZYKUIKTTP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07b931eceff2aefeb",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0111a56496d45b653",
              "eni-0d30a5ac37d7d0601"
            ],
            "owner_id": "077784309645",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c3a15f420e2f313b"
            ],
            "service_name": "com.amazonaws.us-east-2.ec2messages",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.143",
                "subnet_id": "subnet-045488966a28f5036"
              },
              {
                "ipv4": "10.0.4.12",
                "subnet_id": "subnet-094b1bc9b3d749779"
              }
            ],
            "subnet_ids": [
              "subnet-045488966a28f5036",
              "subnet-094b1bc9b3d749779"
            ],
            "tags": {
              "Name": "commercial-manager-ec2messages-vpce"
            },
            "tags_all": {
              "Name": "commercial-manager-ec2messages-vpce"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0cf7778f99f6d3844"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.commercial_manager_ec2_sg",
            "module.vpc.aws_subnet.commercial_manager_private_subnet_a",
            "module.vpc.aws_subnet.commercial_manager_private_subnet_b",
            "module.vpc.aws_vpc.commercial_manager_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077784309645:vpc-endpoint/vpce-0cdb906e74bb3c5cb",
            "dns_entry": [
              {
                "dns_name": "vpce-0cdb906e74bb3c5cb-jbculvrw.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0cdb906e74bb3c5cb-jbculvrw-us-east-2a.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0cdb906e74bb3c5cb-jbculvrw-us-east-2b.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "ssm.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z095923311BV791LXDV3U"
              },
              {
                "dns_name": "ssm.us-east-2.api.aws",
                "hosted_zone_id": "Z09607821FFATBQYQ28DB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cdb906e74bb3c5cb",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-000e95a1d3ace795c",
              "eni-03719850a05fb10c1"
            ],
            "owner_id": "077784309645",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c3a15f420e2f313b"
            ],
            "service_name": "com.amazonaws.us-east-2.ssm",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.215",
                "subnet_id": "subnet-045488966a28f5036"
              },
              {
                "ipv4": "10.0.4.109",
                "subnet_id": "subnet-094b1bc9b3d749779"
              }
            ],
            "subnet_ids": [
              "subnet-045488966a28f5036",
              "subnet-094b1bc9b3d749779"
            ],
            "tags": {
              "Name": "commercial-manager-ssm-vpce"
            },
            "tags_all": {
              "Name": "commercial-manager-ssm-vpce"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0cf7778f99f6d3844"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.commercial_manager_ec2_sg",
            "module.vpc.aws_subnet.commercial_manager_private_subnet_a",
            "module.vpc.aws_subnet.commercial_manager_private_subnet_b",
            "module.vpc.aws_vpc.commercial_manager_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages_vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077784309645:vpc-endpoint/vpce-07db888245ac1db45",
            "dns_entry": [
              {
                "dns_name": "vpce-07db888245ac1db45-gehur185.ssmmessages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-07db888245ac1db45-gehur185-us-east-2b.ssmmessages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-07db888245ac1db45-gehur185-us-east-2a.ssmmessages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "ssmmessages.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z05416201NMXUR0UF2R6U"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07db888245ac1db45",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0c949dd7b9565b186",
              "eni-0e160745355832141"
            ],
            "owner_id": "077784309645",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c3a15f420e2f313b"
            ],
            "service_name": "com.amazonaws.us-east-2.ssmmessages",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.121",
                "subnet_id": "subnet-045488966a28f5036"
              },
              {
                "ipv4": "10.0.4.224",
                "subnet_id": "subnet-094b1bc9b3d749779"
              }
            ],
            "subnet_ids": [
              "subnet-045488966a28f5036",
              "subnet-094b1bc9b3d749779"
            ],
            "tags": {
              "Name": "commercial-manager-ssmmessages-vpce"
            },
            "tags_all": {
              "Name": "commercial-manager-ssmmessages-vpce"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0cf7778f99f6d3844"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.commercial_manager_ec2_sg",
            "module.vpc.aws_subnet.commercial_manager_private_subnet_a",
            "module.vpc.aws_subnet.commercial_manager_private_subnet_b",
            "module.vpc.aws_vpc.commercial_manager_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "commercial_manager_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077784309645:security-group/sg-05514f4a9664f89a1",
            "description": "Allow MySQL access from within the VPC and from the EC2 initialization instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05514f4a9664f89a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "commercial-manager-rds-sg",
            "name_prefix": "",
            "owner_id": "077784309645",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "commercial-manager-rds-sg"
            },
            "tags_all": {
              "Name": "commercial-manager-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf7778f99f6d3844"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "077784309645",
            "id": "sg-05514f4a9664f89a1",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.commercial_manager_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ec2_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow MySQL access from the EC2 instance",
            "from_port": 3306,
            "id": "sgrule-2910220183",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-05514f4a9664f89a1",
            "security_group_rule_id": "sgr-0f53761523c0be001",
            "self": false,
            "source_security_group_id": "sg-0c3a15f420e2f313b",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.commercial_manager_ec2_sg",
            "module.rds.aws_security_group.commercial_manager_rds_sg",
            "module.vpc.aws_vpc.commercial_manager_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "commercial_manager_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077784309645:internet-gateway/igw-03602ae23a0c63033",
            "id": "igw-03602ae23a0c63033",
            "owner_id": "077784309645",
            "region": "us-east-2",
            "tags": {
              "Name": "commercial-manager-igw"
            },
            "tags_all": {
              "Name": "commercial-manager-igw"
            },
            "vpc_id": "vpc-0cf7778f99f6d3844"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.commercial_manager_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "commercial_manager_private_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077784309645:route-table/rtb-06fd01588b16c7a24",
            "id": "rtb-06fd01588b16c7a24",
            "owner_id": "077784309645",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Name": "commercial-manager-private-rt-a"
            },
            "tags_all": {
              "Name": "commercial-manager-private-rt-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf7778f99f6d3844"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.commercial_manager_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "commercial_manager_private_rt_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077784309645:route-table/rtb-09ff2cb25255ad988",
            "id": "rtb-09ff2cb25255ad988",
            "owner_id": "077784309645",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Name": "commercial-manager-private-rt-b"
            },
            "tags_all": {
              "Name": "commercial-manager-private-rt-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf7778f99f6d3844"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.commercial_manager_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "commercial_manager_public_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077784309645:route-table/rtb-098afd44b9966cf1d",
            "id": "rtb-098afd44b9966cf1d",
            "owner_id": "077784309645",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03602ae23a0c63033",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "commercial-manager-public-rt-a"
            },
            "tags_all": {
              "Name": "commercial-manager-public-rt-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf7778f99f6d3844"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.commercial_manager_igw",
            "module.vpc.aws_vpc.commercial_manager_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "commercial_manager_public_rt_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077784309645:route-table/rtb-02808420cb871e2f4",
            "id": "rtb-02808420cb871e2f4",
            "owner_id": "077784309645",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03602ae23a0c63033",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "commercial-manager-public-rt-b"
            },
            "tags_all": {
              "Name": "commercial-manager-public-rt-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf7778f99f6d3844"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.commercial_manager_igw",
            "module.vpc.aws_vpc.commercial_manager_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "commercial_manager_private_rta_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024615963e168fcf0",
            "region": "us-east-2",
            "route_table_id": "rtb-06fd01588b16c7a24",
            "subnet_id": "subnet-045488966a28f5036"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.commercial_manager_private_rt_a",
            "module.vpc.aws_subnet.commercial_manager_private_subnet_a",
            "module.vpc.aws_vpc.commercial_manager_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "commercial_manager_private_rta_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a53a72004faca46",
            "region": "us-east-2",
            "route_table_id": "rtb-09ff2cb25255ad988",
            "subnet_id": "subnet-094b1bc9b3d749779"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.commercial_manager_private_rt_b",
            "module.vpc.aws_subnet.commercial_manager_private_subnet_b",
            "module.vpc.aws_vpc.commercial_manager_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "commercial_manager_public_rta_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e12a38b644c6229",
            "region": "us-east-2",
            "route_table_id": "rtb-098afd44b9966cf1d",
            "subnet_id": "subnet-0e34c58713044d894"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.commercial_manager_igw",
            "module.vpc.aws_route_table.commercial_manager_public_rt_a",
            "module.vpc.aws_subnet.commercial_manager_public_subnet_a",
            "module.vpc.aws_vpc.commercial_manager_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "commercial_manager_public_rta_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8a88fbb615ac4b6",
            "region": "us-east-2",
            "route_table_id": "rtb-02808420cb871e2f4",
            "subnet_id": "subnet-030d14112cce5d6bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.commercial_manager_igw",
            "module.vpc.aws_route_table.commercial_manager_public_rt_b",
            "module.vpc.aws_subnet.commercial_manager_public_subnet_b",
            "module.vpc.aws_vpc.commercial_manager_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "commercial_manager_private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077784309645:subnet/subnet-045488966a28f5036",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045488966a28f5036",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077784309645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "commercial-manager-private-subnet-a"
            },
            "tags_all": {
              "Name": "commercial-manager-private-subnet-a"
            },
            "vpc_id": "vpc-0cf7778f99f6d3844"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.commercial_manager_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "commercial_manager_private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077784309645:subnet/subnet-094b1bc9b3d749779",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094b1bc9b3d749779",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077784309645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "commercial-manager-private-subnet-b"
            },
            "tags_all": {
              "Name": "commercial-manager-private-subnet-b"
            },
            "vpc_id": "vpc-0cf7778f99f6d3844"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.commercial_manager_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "commercial_manager_public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077784309645:subnet/subnet-0e34c58713044d894",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e34c58713044d894",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "077784309645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "commercial-manager-public-subnet-a"
            },
            "tags_all": {
              "Name": "commercial-manager-public-subnet-a"
            },
            "vpc_id": "vpc-0cf7778f99f6d3844"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.commercial_manager_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "commercial_manager_public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077784309645:subnet/subnet-030d14112cce5d6bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030d14112cce5d6bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "077784309645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "commercial-manager-public-subnet-b"
            },
            "tags_all": {
              "Name": "commercial-manager-public-subnet-b"
            },
            "vpc_id": "vpc-0cf7778f99f6d3844"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.commercial_manager_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "commercial_manager_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077784309645:vpc/vpc-0cf7778f99f6d3844",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00de807ccaed5e030",
            "default_route_table_id": "rtb-01102935eff31f462",
            "default_security_group_id": "sg-04fa459f4048150dc",
            "dhcp_options_id": "dopt-0969bfde84bf5811e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cf7778f99f6d3844",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01102935eff31f462",
            "owner_id": "077784309645",
            "region": "us-east-2",
            "tags": {
              "Name": "commercial-manager-vpc"
            },
            "tags_all": {
              "Name": "commercial-manager-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}